--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="overlay"></div>
     <div class="content">
       <div class="logo">
-        <img src="img/1.webp" alt="Logo">
+        <img src="img/1.jpg" alt="Logo">
       </div>
       <h1 class="rubik-burned-regular">$APTO</h1>
       <img class="center-photo" src="img/1.webp" alt="Center Photo">
